--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .container{
     width:980px;
+    margin: 0 auto;
     padding: 25px;
+    font-size: 24px;
     background-color: bisque;
 }
 .parallax{
